Upgrade SpringBoot to 4.0.1